--- a/package.json
+++ b/package.json
@@ -3,11 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "prettier": "prettier --check \"src/**/*.js\" \"test/**/*.js\"",
+    "prettier:fix": "prettier --write \"src/**/*.js\" \"test/**/*.js\"",
+    "eslint": "eslint \"src/**/*.js\" \"test/**/*.js\"",
+    "eslint:fix": "eslint --fix \"src/**/*.js\" \"test/**/*.js\"",
+    "pretest": "npm run prettier --if-present && npm run eslint --if-present",
+    "pretest:fix": "npm run prettier:fix --if-present && npm run eslint:fix --if-present",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/app.js"
   },
   "dependencies": {
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.8"
   }
 }
