chore(deps-dev): added mocha, nyc & supertest

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,5 +17,8 @@
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
     "strict": 1,
     "import/no-extraneous-dependencies": 1
+  },
+  "env": {
+    "mocha": true
   }
 }
