--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "node ./src/app.js"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
