--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
-    "debug": "^4.3.4",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "log4js": "^6.9.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
