--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "log4js": "^6.9.1",
+    "mongoose": "^7.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
