--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,18 @@ jobs:
         node-version: 18
         cache: 'npm'
 
+    - name: Install MongoDB 4.4.x
+      run: |
+        wget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | sudo apt-key add -
+        echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/4.4 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.4.list
+        sudo apt-get update
+        sudo apt-get install -y mongodb-org
+
+    - name: Start MongoDB Service
+      run: |
+        sudo systemctl start mongod
+        sudo systemctl status mongod
+
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
